# robots-gen

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
robots_gen/: __init__.py  core.py
tests/: test_robots_gen.py
